Fix: Einstellungen Mail View ohne IMAP/SMTP Port (#78)
jVerein issue:
"v2.8.20 Mail defekt #86" https://github.com/jverein/jverein/issues/86

Co-authored-by: Alexander Dippe <info@dippe-it.de>